--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +31,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  border: 2px solid rgb(212, 210, 210);
+  margin-top: 80px;
+  padding: 50px;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
 }
